// ============================================================================
// /service/contract-billing-service (版本 2.0)
// 描述: 管理服务合同的计费计划和发票创建。
// ============================================================================

syntax = "proto3";

package enterprise.service.billing;

option java_package = "com.enterprise.service.billing.v2";
option java_multiple_files = true;
option go_package = "github.com/enterprise-extensions/service/billing/v2;billing";

import "google/protobuf/timestamp.proto";
import "common/common.proto";

// ============================================================================
// 服务定义: ContractBillingService
// ============================================================================

service ContractBillingService {
  // 创建计费计划 (New)
  rpc CreateBillingPlan(CreateBillingPlanRequest) returns (BillingPlanResponse);

  // 获取服务合同详情
  rpc GetServiceContract(GetServiceContractRequest) returns (ServiceContractDetail);
  
  // 获取计费历史 (New)
  rpc GetBillingHistory(GetBillingHistoryRequest) returns (BillingHistoryResponse);

  // 预览计费运行 (New)
  rpc PreviewBillingRun(PreviewBillingRunRequest) returns (PreviewBillingRunResponse);

  // 执行计费运行 - 异步
  rpc RunBilling(RunBillingRequest) returns (enterprise.common.JobInfo);
}

// ============================================================================
// 数据结构: ServiceContract (服务合同)
// ============================================================================

// 服务合同详情
message ServiceContractDetail {
  string contract_number = 1;
  string customer_id = 2;
  enterprise.common.DateRange validity_period = 3;
  repeated BillingPlanItem billing_plan = 4;
}

// 计费计划项
message BillingPlanItem {
  google.protobuf.Timestamp planned_billing_date = 1;
  enterprise.common.MonetaryValue billing_amount = 2;
  enterprise.common.BillingPlanStatus status = 3;
  string invoice_number = 4;
}

// ============================================================================
// RPC 消息定义
// ============================================================================

message CreateBillingPlanRequest {
  string contract_number = 1;
  repeated BillingPlanItem items = 2;
  enterprise.common.RequestContext context = 99;
}

message BillingPlanResponse {
  bool success = 1;
  string contract_number = 2;
  repeated enterprise.common.ApiMessage messages = 3;
}

// 获取服务合同请求
message GetServiceContractRequest {
  string contract_number = 1;
  enterprise.common.RequestContext context = 99;
}

message GetBillingHistoryRequest {
  string contract_number = 1;
  enterprise.common.PaginationRequest pagination = 98;
  enterprise.common.RequestContext context = 99;
}

message BillingHistoryResponse {
  repeated BillingPlanItem history = 1;
  enterprise.common.PaginationResponse pagination = 2;
}

message PreviewBillingRunRequest {
  google.protobuf.Timestamp billing_until_date = 1;
  repeated string contract_numbers = 2;
  enterprise.common.RequestContext context = 99;
}

message PreviewBillingRunResponse {
  int32 expected_invoices = 1;
  enterprise.common.MonetaryValue total_expected_amount = 2;
  repeated BillingPlanItem preview_items = 3;
}

// 执行计费运行请求
message RunBillingRequest {
  google.protobuf.Timestamp billing_until_date = 1;
  repeated string contract_numbers = 2;
  enterprise.common.RequestContext context = 99;
}
